# ladspa-reverb

./: .clang-format  CMakeLists.txt  LICENSE  ladspa_reverb.cpp  ladspa_reverb.h  lifetime_handler.cpp  port_description.cpp  port_description.hpp  port_descriptor_builder.cpp  port_descriptor_builder.hpp  port_id.h
test/: CMakeLists.txt  ladspa_descriptor_unittest.cpp  ladspa_test_helpers.h  reverb_descriptor_unittest.cpp  reverb_instance_unittest.cpp
